# lucid-script

./: .gitignore  CMakeLists.txt  README.md
example/: Main.cpp  Script.lc
lucid/common/: LIB_PCH.hpp
lucid/include/: Lucid.hpp  LucidData.hpp
lucid/source/: Lucid.cpp
